@@ -50,7 +50,8 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [AgentS] Add ability to inject data in cache from agents
   * [Config] Config cache format change to include partitions
   * [ERs] Add *none EventReader type
-  * [SessionS] Added support for *stir_authorize
+  * [SessionS] Added support for *stir_authenticate
+  * [SessionS] Added support for *stir_initiate
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200
 
